[gd_scene load_steps=22 format=3 uid="uid://c7soajgfualrj"]

[ext_resource type="Script" path="res://Code/Characters/Player/dungeon_character.gd" id="1_wi8wb"]
[ext_resource type="Resource" uid="uid://f30cv8yiindy" path="res://Data/Characters/Player/Main/main.tres" id="2_parfh"]
[ext_resource type="Texture2D" uid="uid://cvtsu65bm68p7" path="res://Textures/character/Player Template/Player Spritesheet.png" id="3_p6wjx"]
[ext_resource type="PackedScene" uid="uid://bj3vbm3bjados" path="res://Scenes/Characters/Player/Actions/attack.tscn" id="4_r63py"]
[ext_resource type="PackedScene" uid="uid://biigovwg63m17" path="res://Scenes/Characters/Player/Actions/jump.tscn" id="5_e6krj"]
[ext_resource type="PackedScene" uid="uid://iapl7pc0s30h" path="res://Scenes/Characters/Player/Actions/move.tscn" id="6_lbd67"]
[ext_resource type="PackedScene" uid="uid://cb3ysor5w21bn" path="res://Scenes/Characters/Player/StateMachine/dungeon_state_machine.tscn" id="7_rcci8"]
[ext_resource type="Script" path="res://Code/Utilities/s_animator.gd" id="8_sfv5o"]
[ext_resource type="PackedScene" uid="uid://oq3kbnwvxu2x" path="res://Scenes/Utilities/camera_remote.tscn" id="9_ch5b1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lv2t5"]
radius = 5.0
height = 28.0

[sub_resource type="Animation" id="Animation_p3m1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cq2e0"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_kjmg8"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_qtr1a"]
resource_name = "transitionjump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%state_machine/..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["jump"],
"method": &"_update_animation"
}]
}

[sub_resource type="Animation" id="Animation_0uigy"]
resource_name = "jump"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_fc52a"]
resource_name = "transitionfall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%state_machine/..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["fall"],
"method": &"_update_animation"
}]
}

[sub_resource type="Animation" id="Animation_p25vm"]
resource_name = "fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}

[sub_resource type="Animation" id="Animation_ecbbl"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68]
}

[sub_resource type="Animation" id="Animation_7wadc"]
resource_name = "sword_attack_01"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47, 48, 49]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%state_machine/..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["toggle_attack", "sword_attack_01", "true"],
"method": &"_emit_signal"
}, {
"args": ["toggle_attack", "sword_attack_01", "false"],
"method": &"_emit_signal"
}, {
"args": ["attack_ended", "sword_attack_01", ""],
"method": &"_emit_signal"
}]
}

[sub_resource type="Animation" id="Animation_dpage"]
resource_name = "sword_attack_02"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [50, 51, 52]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%state_machine/..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["toggle_attack", "sword_attack_02", "true"],
"method": &"_emit_signal"
}, {
"args": ["toggle_attack", "sword_attack_02", "false"],
"method": &"_emit_signal"
}, {
"args": ["attack_ended", "sword_attack_02", ""],
"method": &"_emit_signal"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0xnee"]
_data = {
"RESET": SubResource("Animation_p3m1b"),
"death": SubResource("Animation_ecbbl"),
"fall": SubResource("Animation_p25vm"),
"idle": SubResource("Animation_cq2e0"),
"jump": SubResource("Animation_0uigy"),
"sword_attack_01": SubResource("Animation_7wadc"),
"sword_attack_02": SubResource("Animation_dpage"),
"transitionfall": SubResource("Animation_fc52a"),
"transitionjump": SubResource("Animation_qtr1a"),
"walk": SubResource("Animation_kjmg8")
}

[node name="CharacterDungeon" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wi8wb")
character_data = ExtResource("2_parfh")

[node name="sprite" type="Sprite2D" parent="." groups=["flip"]]
unique_name_in_owner = true
position = Vector2(0, -17)
texture = ExtResource("3_p6wjx")
hframes = 10
vframes = 11

[node name="move_collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_lv2t5")

[node name="Attack" parent="." instance=ExtResource("4_r63py")]

[node name="Jump" parent="." instance=ExtResource("5_e6krj")]

[node name="Move" parent="." instance=ExtResource("6_lbd67")]

[node name="state_machine" parent="." instance=ExtResource("7_rcci8")]
unique_name_in_owner = true

[node name="animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../state_machine")
libraries = {
"": SubResource("AnimationLibrary_0xnee")
}
script = ExtResource("8_sfv5o")

[node name="camera_remote" parent="." instance=ExtResource("9_ch5b1")]
